force-app/main/default/objects/Sales_Summary__c/Sales_Summary__c.object-meta.xml
<CustomObject>
    <label>Sales Summary</label>
    <nameField>
        <displayFormat>SS-{0000}</displayFormat>
        <label>Sales Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>