force-app/main/default/objects/Sales_Summary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Summaries</relationshipLabel>
    <relationshipName>Sales_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>