force-app/main/default/objects/Sales_Summary__c/fields/Month_End__c.field-meta.xml
<CustomField>
    <fullName>Month_End__c</fullName>
    <label>Month End</label>
    <type>Date</type>
</CustomField>