force-app/main/default/objects/Sales_Summary__c/fields/Total_Products__c.field-meta.xml
<CustomField>
    <fullName>Total_Products__c</fullName>
    <label>Total Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>